--- a/reading.html
+++ b/reading.html
@@ -1,11 +1,13 @@
 <html>
-    <head><link rel="stylesheet" type="text/css" href="post.css"</head>
+    <head>
+      <link rel="stylesheet" type="text/css" href="post.css">
+      <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans&display=swap" rel="stylesheet"> 
+    </head>
     <body>
     <header>
         <h1>Reading</h1>
      </header>
     
-
     <h2>Sites</h2>
     
     <p><a href="https://news.ycombinator.com">Hackernews</a>, <a href="https://www.discoverdev.io">DiscoverDev</a>, <a href="https://techmeme.com">Techmeme</a>, <a href="https://www.arstechnica.com">ArsTechnica</a>, <a href="https://www.zerohedge.com">Zero Hedge</a>, <a href="https://spacenews.com">Space News</a>, <a href="https://design-milk.com">Design Milk</a></p>
