--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="main.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-        <title>elliot alker</title>
+        <title>Elliot Alker</title>
     </head>
     
     <body>
         <div class="head">
-            <h1 class="animated fadeInDown delay-1s">elliot alker</h1>
-            <h3 class="animated fadeInDown delay-2s">full stack developer based in Glasgow</h3>
+            <h1 class="animated fadeInDown delay-1s">Elliot Alker</h1>
+            <h3 class="animated fadeInDown delay-2s">Full stack developer based in Glasgow</h3>
         </div>
         <div class="animated fadeIn delay-3s">
             <ul>
