--- a/reading.html
+++ b/reading.html
@@ -23,11 +23,13 @@
       <li><a href="https://www.joelonsoftware.com">Joel Spolsky</a></li>
       <li><a href="https://idlewords.com">Idle Words (Maciej Ceglowski)</a></li>
       <li><a href="https://daringfireball.net">Daring Fireball (John Gruber)</a></li>
-      <li><a href="">Dan Luu</a></li>
+      <li><a href="https://danluu.com/">Dan Luu</a></li>
       <li><a href="https://patrickcollison.com">Patrick Collison</a>: CEO of Stripe</li>
       <li><a href="http://www.paulgraham.com/articles.html">Paul Graham</a>: YCombinator</li>
-      <li><a href="https://www.schneier.com">Bruce Schneier (Schneier on Security)</a></li>
-      <li><a href="http://blog.hnjsamuels.co.uk">Harry Samuels</a>: All around good guy</li>
+      <li><a href="https://www.schneier.com">Schneier on Security (Bruce Schneier)</a></li>
+      <li><a href="https://www.kalzumeus.com/">Kalzumeus (Patrick McKenzie)</a></li>
+      <li><a href="https://sivers.org/">Derek Sivers</a></li>
+      <li><a href="http://matt.might.net/articles/">Professor Matt Might</a></li>
     </ul>
     
     <h2>Articles</h2>
