--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         </div>
         <div class="animated fadeIn delay-3s">
             <ul>
+                <li><a href=/blog.html">blog</a></li>
                 <li><a href="https://github.com/ealker">code</a></li>
                 <li><a href="https://www.linkedin.com/in/elliot-alker/">linkedin</a></li>
                 <li><a href="docs/elliotalkercv.pdf">resume</a></li>
                 <li><a href="http://users.aber.ac.uk/ela12">university</a></li>
-                <li><a href="reading.html">reading</a></li>
+                <li><a href="engineering.html">software engineering</a></li>
                 <li><a href="https://www.alker.xyz">projects</a></li>
             </ul>
         </div>
