--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="https://www.linkedin.com/in/elliot-alker/">linkedin</a></li>
                 <li><a href="docs/elliotalkercv.pdf">resume</a></li>
                 <li><a href="http://users.aber.ac.uk/ela12">university</a></li>
-                <li><a href="engineering.html">software engineering</a></li>
+                <li><a href="/engineering.html">software engineering</a></li>
                 <li><a href="https://www.alker.xyz">projects</a></li>
             </ul>
         </div>
