--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="animated fadeIn delay-3s">
             <ul>
-                <li><a href=/blog.html">blog</a></li>
+                <li><a href="/blog.html">blog</a></li>
                 <li><a href="https://github.com/ealker">code</a></li>
                 <li><a href="https://www.linkedin.com/in/elliot-alker/">linkedin</a></li>
                 <li><a href="docs/elliotalkercv.pdf">resume</a></li>
