--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="head">
             <h1 class="animated fadeInDown delay-1s">Elliot Alker</h1>
-            <h3 class="animated fadeInDown delay-2s">Full stack developer based in Glasgow</h3>
+            <h3 class="animated fadeInDown delay-2s">Software Engineer based in the UK</h3>
         </div>
         <div class="animated fadeIn delay-3s">
             <ul>
