Added new styling to blog listing.

--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
      </header>
     <ul>
       <li><a href="/posts/2020/review-2020-03-22.html">Weekly Review 22nd March 2020</a></li>
+      <li><a href="/posts/2020/dont-know-2020-10-25.html">Things I Don't Know (2020)</a></li>
     </ul>
     </body>
  </html>
