--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <body>
         <div class="head">
             <h1 class="animated fadeInDown delay-1s">Elliot Alker</h1>
-            <h3 class="animated fadeInDown delay-2s">Software Engineer based in the UK</h3>
+            <h3 class="animated fadeInDown delay-2s">Software Engineer</h3>
         </div>
         <div class="animated fadeIn delay-3s">
             <ul>
                 <li><a href="/blog.html">blog</a></li>
-                <li><a href="https://github.com/ealker">code</a></li>
+                <li><a href="https://github.com/elliotalker">code</a></li>
                 <li><a href="https://www.linkedin.com/in/elliot-alker/">linkedin</a></li>
                 <li><a href="docs/elliotalkercv.pdf">resume</a></li>
                 <li><a href="http://users.aber.ac.uk/ela12">university</a></li>
                 <li><a href="/engineering.html">software engineering</a></li>
                 <li><a href="https://www.alker.xyz">projects</a></li>
+                <li><a href="https://twitter.com/elliotdev_">twitter</a></li>
             </ul>
         </div>
     </body>
