--- a/index.html
+++ b/index.html
@@ -1,28 +1,17 @@
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="main.css">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-        <title>Elliot Alker</title>
-    </head>
-    
-    <body>
-        <div class="head">
-            <h1 class="animated fadeInDown delay-1s">Elliot Alker</h1>
-            <h3 class="animated fadeInDown delay-2s">Software Engineer</h3>
-        </div>
-        <div class="animated fadeIn delay-3s">
-            <ul>
-                <li><a href="/blog.html">blog</a></li>
-                <li><a href="https://github.com/elliotalker">code</a></li>
-                <li><a href="https://www.linkedin.com/in/elliot-alker/">linkedin</a></li>
-                <li><a href="docs/elliotalkercv.pdf">resume</a></li>
-                <li><a href="http://users.aber.ac.uk/ela12">university</a></li>
-                <li><a href="/engineering.html">software engineering</a></li>
-                <li><a href="https://www.alker.xyz">projects</a></li>
-                <li><a href="https://twitter.com/elliotdev_">twitter</a></li>
-            </ul>
-        </div>
-    </body>
-</html>
+---
+layout: home
+title: Elliot Alker
+---
+
+<div class="animated fadeIn delay-1s">
+    <ul>
+        <li><a href="/blog.html">blog</a></li>
+        <li><a href="https://github.com/elliotalker">code</a></li>
+        <li><a href="https://www.alker.xyz">web projects</a></li>
+        <li><a href="/software-engineering.html">software engineering</a></li>
+        <li><a href="https://pinboard.in/u:elliot35">links</a></li>
+        <li><a href="https://twitter.com/elliotdev_">twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/elliot-alker/">linkedin</a></li>
+        <li><a href="/about.html">about</a></li>
+    </ul>
+</div>
