--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,12 @@
 ---
 layout: page
-title: Blog
+title: Blog Posts
 ---
 
 <ul>
   {% for post in site.posts %}
     <li>
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      {{ post.excerpt }}
     </li>
   {% endfor %}
 </ul>
