Updated sections - ongoing design work merging two websites.

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,8 @@
 ---
 layout: page
-title: Blog Posts
 ---
+
+<h2>Posts</h2>
 
 {% for post in site.posts %}
   {% assign currentdate = post.date | date: "%Y" %}
