--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<h2>Posts</h2>
+<div class="container">
 
 {% for post in site.posts %}
   {% assign currentdate = post.date | date: "%Y" %}
@@ -12,9 +12,10 @@ layout: page
   {% endif %}
     <ul>
         <li>
-          <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+          <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
           <p>{{ post.date | date: '%B %d, %Y' }}</p>
         </li>
     </ul>
 {% endfor %}
 
+</div>
