--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@ layout: default
 title: Elliot Alker
 ---
 
-<h2>Posts</h2>
-
-{% for post in site.posts %}
-  {% assign currentdate = post.date | date: "%Y" %}
-  {% if currentdate != date %}
-    <h2 id="y{{currentdate}}">{{ currentdate }}</h2>
-    {% assign date = currentdate %} 
-  {% endif %}
-    <ul>
-        <li>
-          <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-          <p>{{ post.date | date: '%B %d, %Y' }}</p>
-        </li>
-    </ul>
-{% endfor %}
-
+<div class="container">
+  <div class="mx-l" style="width: 75%;">
+    <li><a href="https://github.com/elliotalker">code</a></li>
+    <li><a href="https://www.alker.xyz">web projects</a></li>
+    <li><a href="/software-engineering.html">software engineering</a></li>
+    <li><a href="https://pinboard.in/u:elliot35">pinboard</a></li>
+    <li><a href="https://twitter.com/elliotdev_">twitter</a></li>
+    <li><a href="https://www.linkedin.com/in/elliot-alker/">linkedin</a>
+  </div>
+</div>
