--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,8 @@
 layout: bloghome
 ---
 
+<h2>All Posts</h2>
+
 {% for post in site.posts %}
   {% assign currentdate = post.date | date: "%Y" %}
   {% if currentdate != date %}
@@ -11,7 +13,7 @@ layout: bloghome
     <ul>
         <li>
           <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-          <p>{{ post.date | date: '%B %d, %Y' }}</p>
+          <p>{{ post.date | date: '%B %Y' }}</p>
         </li>
     </ul>
 {% endfor %}
