--- a/blog.html
+++ b/blog.html
@@ -1,19 +1,16 @@
 ---
-layout: bloghome
+layout: page
+title: Posts
 ---
-
-<h2>All Posts</h2>
 
 {% for post in site.posts %}
   {% assign currentdate = post.date | date: "%Y" %}
   {% if currentdate != date %}
-    <h3 id="y{{currentdate}}">{{ currentdate }}</h3>
-    {% assign date = currentdate %} 
-  {% endif %}
+    {% unless forloop.first %}</ul>{% endunless %}
+    <h3 id="y{{post.date | date: "%Y"}}">{{ currentdate }}</h3>
     <ul>
-        <li>
-          <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-          <p>{{ post.date | date: '%B %Y' }}</p>
-        </li>
-    </ul>
+    {% assign date = currentdate %}
+  {% endif %}
+    <li><a href="{{ post.url }}"> {{post.title }}</a></li>
+  {% if forloop.last %}</ul>{% endif %}
 {% endfor %}
